--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
               zef test .
       - run:
           name: publish
+          when:
+            - equal: [circle-tests, << pipeline.git.branch >> ]
           command: |
               git rev-parse --abbrev-ref HEAD
-              if [[ "$(git rev-parse --abbrev-ref HEAD)" == "circle-tests" ]]; then
-                exit 1
-              fi
