--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,7 @@ jobs:
               if [[ "$CIRCLE_BRANCH" = "circle-tests" ]]; then
                 # this will fail to index
                 raku -I. -e 'require ::("Fez::CLI"); my $*USERNAME = %*ENV<FEZ_UN>; my $*PASSWORD = %*ENV<FEZ_PW>; ::("Fez::CLI")::<&MAIN>("upload");'
+                echo 'HELLO'
+              else
+                echo 'publish only master!'
               fi
