--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: os deps
         run: |
           apt update && \
-          apt install -y pax git
+          apt install -y git
       - name: clone
         run: git clone -b "${GITHUB_REF##*/}" https://github.com/tony-o/raku-fez ./fez
       - name: module deps
