clean up some of this nonsense

--- a/resources/config.json
+++ b/resources/config.json
@@ -1,4 +1,4 @@
 {"bundlers": ["Fez::Util::Pkg"],
  "requestors": ["Fez::Util::Curl", "Fez::Util::Wget"],
- "host": "https://api.zef.pm"
+ "host": "https://v100.zef.pm"
 }
